@@ -3,13 +3,15 @@ package io.github.reserveword.imblocker;
 import net.minecraft.client.gui.screen.ingame.BookEditScreen;
 import net.minecraft.client.gui.screen.ingame.SignEditScreen;
 
-import java.util.Arrays;
 import java.util.List;
 
 public class FabricCommon {
-    public static final List<String> defaultScreenWhitelist = Arrays.asList(
+    public static final List<String> defaultScreenWhitelist = List.of(
             BookEditScreen.class.getName(),
             SignEditScreen.class.getName(),
             "journeymap.client.ui.waypoint.WaypointEditor",
             "com.ldtteam.blockout.BOScreen");
+    public static final List<String> defaultScreenBlacklist = List.of(
+            "com.mamiyaotaru.voxelmap.persistent.GuiPersistentMap"
+    );
 }
